[package]
name = "dnsbl-server"
version = "1.2.0"
edition = "2021"
authors = ["Philippe TEMESI"]
description = "A complete DNSBL toolkit: server with HTTP/HTTPS support and query client"
license = "GPL"
homepage = "https://www.tems.be"

[profile.release]
codegen-units = 1           # reduces binary size by ~2%
debug = "full"              # No one needs an undebuggable release binary
lto = true                  # reduces binary size by ~14%
opt-level = "s"             # reduces binary size by ~25%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%
incremental = true          # Improves re-compile times


[[bin]]
name = "dnsbl-server"
path = "src/server.rs"

[[bin]]
name = "dnsbl-query"
path = "src/query.rs"

[dependencies]
clap = "2.34"
daemonize = "0.5"
ipnetwork = "0.20"
fern = "0.6"
log = "0.4"
chrono = "0.4"
rand = "0.8"
trust-dns-proto = "0.23"
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.5"

openssl = { version = "0.10", features = ["vendored"] }
