[package]
name = "dnsbl-server"
version = "2.5.0"
edition = "2021"
authors = ["Philippe TEMESI"]
description = "A complete DNSBL toolkit: server with HTTP/HTTPS support, NS records, and real-time DNSBL forwarding"
license = "GPL"
homepage = "https://www.tems.be"

[profile.release]
codegen-units = 1
debug = "full"
lto = true
opt-level = "s"
panic = "abort"
split-debuginfo = "packed"
strip = "symbols"
incremental = true

[[bin]]
name = "dnsbl-server"
path = "src/server.rs"

[[bin]]
name = "dnsbl-query"
path = "src/query.rs"

[dependencies]
clap = "2.34"
daemonize = "0.5"
ipnetwork = "0.20"
fern = "0.6"
log = "0.4"
chrono = "0.4"
rand = "0.8"
trust-dns-proto = "0.23"
trust-dns-resolver = "0.23"
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.5"
openssl = { version = "0.10", features = ["vendored"] }

